[metadata]
name = parsefortran
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Parse four Fortran statements for fast Fortran scanning
url = https://github.com/scivision/fortran-parse-python
keywords =
  fortran
  parse
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6.0
  pip >= 10
packages = find:
scripts =
  test_fortran_parse.py
install_requires =


[options.data_files]


[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy


[options.entry_points]
console_scripts =
